@@ -1,3 +1,3 @@
 Give 10 titles. Should be less than 80 characters. No need to include "Increaser" since it's already in the app.
 
-Write an article for the "Info" page of the app explaining "Task Management", all its functionality, and how it relates to other tools in the app. Keep the article short, but it still should serve as a knowledge base for the user. Keep it engaging an informative. Return it as a code snippet with an unstyled HTML.
+Write an article for the "Info" page of the app explaining "Goals", all its functionality, and how it relates to other tools in the app. Keep the article short, but it still should serve as a knowledge base for the user. Keep it engaging an informative. Return it as a code snippet with an unstyled HTML.
