@@ -1,0 +1,111 @@
+import { infoYouTubeVideos } from '../../info/infoYouTubeVideos'
+import { ProductToolEducation } from './ProductToolEducation'
+
+export const goalsEducation: ProductToolEducation = {
+  title: 'How to Set, Track, and Reach Your Goals',
+  subtitle: `Setting and achieving your goals is a vital step toward living your perfect life. Increaser's "Goals" tool empowers you to define, track, and accomplish your aspirations effectively.`,
+  youTubeVideoUrl: infoYouTubeVideos.goals,
+  content: (
+    <>
+      <h2>Defining Your Goals</h2>
+      <p>
+        On the "Goals" page, you can create goals that align with your personal
+        vision. Each goal can be marked as:
+      </p>
+      <ul>
+        <li>
+          <strong>Active:</strong> Goals you're currently working on.
+        </li>
+        <li>
+          <strong>Done:</strong> Goals you've accomplished.
+        </li>
+        <li>
+          <strong>Idea:</strong> Goals you're considering for the future.
+        </li>
+      </ul>
+      <p>When creating a goal, you can specify:</p>
+      <ul>
+        <li>
+          <strong>Title:</strong> A clear and concise name for your goal.
+        </li>
+        <li>
+          <strong>Deadline:</strong> Set a specific date or target age to
+          achieve it.
+        </li>
+        <li>
+          <strong>Emoji:</strong> Choose an emoji that represents your goal.
+        </li>
+        <li>
+          <strong>Plan:</strong> Outline the steps you'll take to accomplish it.
+        </li>
+        <li>
+          <strong>Progress Tracking:</strong> For measurable goals, input values
+          to monitor your advancement (e.g., saving a certain amount of money).
+        </li>
+      </ul>
+
+      <h2>Visualizing Your Goals</h2>
+      <p>
+        The "Goals" page features a dynamic timeline that helps you visualize
+        your goals over time. You can switch between two views:
+      </p>
+      <ul>
+        <li>
+          <strong>Age-Based View:</strong> See your goals in relation to your
+          age milestones.
+        </li>
+        <li>
+          <strong>Date-Based View:</strong> View your goals based on specific
+          calendar dates.
+        </li>
+      </ul>
+
+      <h2>Integrating with Other Tools</h2>
+      <p>
+        Enhance your goal achievement by connecting them with other Increaser
+        tools:
+      </p>
+      <ul>
+        <li>
+          <strong>Habit Tracking:</strong> Link daily habits to your goals to
+          build consistent routines that support your objectives.
+        </li>
+        <li>
+          <strong>Task Management:</strong> Associate tasks or recurring tasks
+          with your goals to break them down into actionable steps.
+        </li>
+        <li>
+          <strong>Time Planning:</strong> Allocate time specifically for
+          goal-related activities using the "Time Planning" tool.
+        </li>
+      </ul>
+
+      <h2>Making the Most of Your Goals</h2>
+      <p>Here are some tips to effectively use the "Goals" tool:</p>
+      <ul>
+        <li>
+          <strong>Be Specific:</strong> Clearly define what you want to achieve.
+        </li>
+        <li>
+          <strong>Set Realistic Deadlines:</strong> Choose achievable timeframes
+          to maintain motivation.
+        </li>
+        <li>
+          <strong>Regularly Update:</strong> Keep your progress up to date to
+          stay on track.
+        </li>
+        <li>
+          <strong>Review and Adjust:</strong> Periodically revisit your goals
+          and make adjustments as needed.
+        </li>
+      </ul>
+
+      <h2>Start Achieving Your Goals</h2>
+      <p>
+        Take the first step toward your ideal life by setting your goals in
+        Increaser. With a clear plan and the support of integrated tools, you'll
+        be well on your way to success.
+      </p>
+    </>
+  ),
+}
